Sensores completos com a criação de novos sensores, lista-los e exibição de dados um pouco mais especificos e validação. Alterações nos status dos sensores, transformando em enums